--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>My App</title>
+    <style>
+      html,body,#root{
+        width: 100%;
+        height: 100%;
+      }
+
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
